Lightshows (#24)
* Restructured commander framework

* Light show period controllable via API
